# clicky-qt

./: .gitignore  CMakeLists.txt  README.md
qml/: AgentDot.qml  MorphingCompanion.qml  OverlayContent.qml  TaskListContent.qml
src/: companion_state.cpp  companion_state.h  cursor_marked_screenshot_capturer.cpp  cursor_marked_screenshot_capturer.h  cursor_position_tracker.cpp  cursor_position_tracker.h  global_hotkey_manager.cpp  global_hotkey_manager.h  mac_modifier_monitor.h  mac_modifier_monitor.mm  mac_window_config.h  mac_window_config.mm  main.cpp  modifier_key_monitor.cpp  modifier_key_monitor.h  overlay_window.cpp  overlay_window.h  screenshot_capture_controller.cpp  screenshot_capture_controller.h  task_item.cpp  task_item.h  task_list_model.cpp  task_list_model.h  tray_icon_manager.cpp  tray_icon_manager.h
